# iced-editor

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
