[package]
edition = "2021"
name = "iced-editor"
version = "0.1.0"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor", features = ["debug", "tokio", "highlighter", "image"] }
rfd = "0.12"
tokio = { version = "1.32", features = ["fs"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"